# quant_framework

./: .gitignore  CMakeLists.txt  README.md
cmake/: quantframework-config.cmake.in
examples/: CMakeLists.txt  simple_backtest.cpp  simple_ma_strategy.cpp
include/analysis/: performance.hpp
include/backtest/: backtest_engine.hpp
include/data/: data_feed.hpp  data_types.hpp
include/execution/: order.hpp
include/indicators/: moving_average.hpp
include/strategy/: moving_average_strategy.hpp  strategy.hpp
include/utils/: indicators.hpp
src/analysis/: performance.cpp
src/backtest/: backtest_engine.cpp
src/data/: data_feed.cpp
src/execution/: order.cpp
src/indicators/: moving_average.cpp
src/strategy/: moving_average_strategy.cpp  strategy.cpp
tests/: CMakeLists.txt
